# ErgTools

./: Cargo.toml  Dockerfile  README.md  build.rs  compose.yaml
.github/workflows/: ci.yml  rust_clippy.yml
src/: constants.rs  lib.rs  libs.rs  main.rs  types.rs  utils.rs
src/routes/: concept2.rs  mod.rs  pages.rs  splits.rs
static/: site.webmanifest  sw.js
templates/: base.html  calculator.html  concept2.html  index.html
templates_src/: base.html  calculator.html  concept2.html  index.html
