[package]
name = "ergtools"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
build = "build.rs"

[dependencies]
actix-web = "4.10"
askama = "0.14"
mime_guess = "2.0"
once_cell = "1.21"
regex = "1.11"
reqwest = { version = "0.12", features = ["json", "gzip", "native-tls-vendored"] }
rust-embed = "8.7"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
html-minifier = "5.0"

[profile.release-prod]
inherits = "release"
lto = "fat"
strip = true
codegen-units = 1
panic = "abort"
