[package]
name = "ergtools"
version = "1.0.0"
edition = "2024"
license = "AGPL-3.0-only"
build = "build.rs"

[dependencies]
actix-web = { version = "4.10", default-features = false, features = ["macros"] }
askama = { version = "0.14", default-features = false, features = ["config", "derive", "std"] }
mime_guess = "2.0"
once_cell = "1.21"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["default-tls", "http2", "json", "gzip"] }
rust-embed = "8.7"
serde = { version = "1.0", default-features = false, features = ["derive"] }

[build-dependencies]
html-minifier = "5.0"

[profile.release-prod]
inherits = "release"
lto = "fat"
strip = true
codegen-units = 1
panic = "abort"
