[package]
name = "ergtools"
version = "1.0.0"
edition = "2024"
license = "AGPL-3.0-only"
build = "build.rs"

[dependencies]
actix-web = { version = "4.12", default-features = false, features = ["macros"] }
askama = { version = "0.15", default-features = false, features = ["config", "derive", "std"] }
mime_guess = "2.0"
regex = "1.12"
reqwest = { version = "0.13", default-features = false, features = ["json", "gzip"] }
rust-embed = "8.9"
serde = { version = "1.0", default-features = false, features = ["derive"] }

[build-dependencies]
html-minifier = "5.0"

[profile.release-prod]
inherits = "release"
lto = "fat"
strip = true
codegen-units = 1
panic = "abort"
